extended navigation overlay in the editor fix and aligned

--- a/stylesheets/widgets/navigation.less
+++ b/stylesheets/widgets/navigation.less
@@ -23,6 +23,10 @@
     left: 0;
     right: 0;
 
+    -webkit-transform: translateZ(-1px);
+    -ms-transform: translateZ(-1px);
+    transform: translateZ(-1px);
+
     // Widget Overlay in Editor Covers Nav
     .widget-overlay {
         left: 70%!important;
